--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+ </a>
    
 </div>
-<img src="img/Telas.png" alt="Tela da Alura Plus e do Alura Língua" >
+<img src="img/Telas.png" alt="Tela da Alura Plus e do Alura Língua" class="secundario__imagem">
     </section>
 </body>
 
