--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 </div>
 <img src="img/Telas.png" alt="Tela da Alura Plus e do Alura Língua" class="secundario__imagem">
     </section>
+
+    <section class="container secundario"></section>
+        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+            class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
+        </div>
+    </section>
 </body>
 
 </html>
