--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <section class="principal container">
-        <div>
+        <div class="container__caixa">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
                 único.</h1>
             <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
@@ -33,16 +33,17 @@
     </section>
 
     <section class="container secundario">
-<div class="container__descricao">
-    <p class="descricao__texto">Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter acesso a cursos de diversas áreas de tecnologia e aprender ou espanhol onde e como quiser
-    </p>
-    <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+ </a>
-   
-</div>
-<img src="img/Telas.png" alt="Tela da Alura Plus e do Alura Língua" class="secundario__imagem">
+        <div class="container__descricao">
+            <p class="descricao__texto">
+                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
+                tecnologia e aprender inglês ou espanhol, onde e como quiser.
+            </p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+        </div>
+        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
-    <section class="container secundario"></section>
+    <section class="container secundario">
         <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario__imagem">
         <div class="container__descricao">
@@ -53,19 +54,19 @@
     </section>
 
     <section class="dispositivos">
-
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
-            <li> 
-                <img src="img/tv.png" alt="ícone de televisão">
+            <li>
+                <img src="img/tv.png" alt="Ícone de televisão">
                 <h3 class="lista__item">TV</h3>
             </li>
-            <li> <img src="img/computador.png" alt="ícone de computador">
-                 <h3 class="lista__item">Computadores</h3>   
-             </li>
-             <li> <img src="img.celular.png" alt="ícone de celular"> 
+            <li>
+                <img src="img/computador.png" alt="Ícone de computador">
+                <h3 class="lista__item">Computador</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="Ícone de celular">
                 <h3 class="lista__item">Celular</h3>
-            
             </li>
         </ul>
     </section>
